--- a/Backjoon/1단계/1~10번.ipynb
+++ b/Backjoon/1단계/1~10번.ipynb
@@ -19,10 +19,19 @@
    "source": [
     "#9\n",
     "c = [1, 1, 2, 2, 2, 8]\n",
-    "data = list(map(int, input(), split()))\n",
+    "data = list(map(int, input().split()))\n",
     "\n",
     "for i in range(6):\n",
     "    print(c[i] - data[i], end=' ')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#10\n"
    ]
   }
  ],
