--- a/Backjoon/2단계/1.ipynb
+++ b/Backjoon/2단계/1.ipynb
@@ -278,7 +278,10 @@
     }
    ],
    "source": [
-    "#2438\n"
+    "#2438\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
@@ -298,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
